compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__simple_return_negated.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: statement
---
ReturnStatement {
    condition: Some(
        UnaryExpression {
            operator: Not,
            value: BinaryExpression {
                operator: Equal,
                left: Reference {
                    name: "val",
                },
                right: LiteralInteger {
                    value: 5,
                },
            },
        },
    ),
}
