compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__sink_source_data_recursion_does_not_overflow_the_stack.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: "xml_parser::visit(content::SINK_SOURCE_LOOP).unwrap()"
---
Project {
    pous: [
        Pou {
            name: "myConnection",
            pou_type: Function,
            body: Body {
                function_block_diagram: Some(
                    FunctionBlockDiagram {
                        nodes: {},
                    },
                ),
            },
            actions: [],
            interface: Some(
                Interface {
                    add_data: Some(
                        Data {
                            content: "\n    FUNCTION myConnection : DINT\n    VAR_INPUT\n        x: DINT;\n    END_VAR\n                \nEND_FUNCTION",
                            handle: Implementation,
                        },
                    ),
                },
            ),
        },
    ],
}
